# master-plan-painel

./: .dockerignore  .env.example  .gitignore  CLAUDE.md  Caddyfile  DEPLOY-DO.md  Dockerfile  LICENSE  PURPOSE.md  README.md  docker-compose.prod.yml  docker-compose.yml  pyproject.toml
.do/: app.yaml
.github/workflows/: cli-ci.yml  cli-release.yml
clients/rust/: CHANGELOG.md  Cargo.toml  README.md
clients/rust/cli/: Cargo.toml
clients/rust/cli/src/: cli.rs  env_file.rs  main.rs  output.rs
clients/rust/sdk/: Cargo.toml
clients/rust/sdk/src/: client.rs  error.rs  lib.rs  models.rs
docs/: TOOLING.md
frontend/: .prettierignore  .prettierrc.json  README.md  index.html  package-lock.json  package.json  tsconfig.json  vite.config.ts
frontend/public/: manifest.webmanifest
frontend/scripts/: generate-palette.mjs
frontend/src/: App.svelte  app.css  main.ts
frontend/src/lib/: ApiKeysPanel.svelte  AppFooter.svelte  AuthPanel.svelte  Logo.svelte  ProjectAvatar.svelte  ProjectEffortDonut.svelte  ProjectForm.svelte  ProjectList.svelte  ProjectView.svelte  PublicLanding.svelte  ReportView.svelte  WorkLogView.svelte  WorkViz.svelte  api-key-types.ts  api-keys-api.ts  api.ts  auth-api.ts  auth-store.svelte.ts  auth-types.ts  http.ts  palette.ts  public-api.ts  report-api.ts  types.ts  work-api.ts  work-types.ts
nginx/: default.conf
scripts/: seed.py
src/master_plan/: __init__.py  docgen.py  worklog_cli.py
src/master_plan/api/: __init__.py  _io.py  api_key_repository.py  api_key_schemas.py  auth_schemas.py  errors.py  main.py  repository.py  schemas.py  security.py  spaces.py  user_repository.py  work_repository.py  work_schemas.py
src/master_plan/models/: __init__.py  api_key.py  auth.py  project.py  work_log.py
tests/: auth_helpers.py  test_api.py  test_api_keys.py  test_auth.py  test_auth_api.py  test_auth_refresh.py  test_deploy_hardening.py  test_docgen.py  test_error_envelope.py  test_project.py  test_work_api.py  test_work_log.py  test_worklog_cli.py
