[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "master-plan-painel"
version = "0.1.0"
description = "Pydantic models for cataloguing projects (codebases) by domain, purpose, language, and packages."
readme = "README.md"
requires-python = ">=3.11"
dependencies = ["pydantic>=2.11,<3"]

[project.optional-dependencies]
api = ["fastapi>=0.115", "uvicorn[standard]>=0.30"]
dev = ["pytest>=8", "httpx>=0.27"]

[tool.hatch.build.targets.wheel]
packages = ["src/master_plan"]

[tool.pytest.ini_options]
pythonpath = ["src"]
testpaths = ["tests"]
