[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "master-plan-painel"
version = "0.1.0"
description = "Pydantic models for cataloguing projects (codebases) by domain, purpose, language, and packages."
readme = "README.md"
requires-python = ">=3.11"
dependencies = ["pydantic>=2.11,<3"]

[project.optional-dependencies]
# boto3 powers the optional DigitalOcean Spaces write-through mirror
# (master_plan.api.spaces); it is imported lazily only when Spaces is
# configured, so it is inert for local/volume deployments.
api = ["fastapi>=0.115", "uvicorn[standard]>=0.30", "boto3>=1.34"]
dev = ["pytest>=8", "httpx>=0.27"]

[project.scripts]
# Auto-generates docs/TOOLING.md from source (routes, env vars, CLI scripts).
# Needs the `api` extra (FastAPI) to introspect the app.
master-plan-docgen = "master_plan.docgen:main"
# Register/list work-log entries from the command line.
master-plan-worklog = "master_plan.worklog_cli:main"

[tool.hatch.build.targets.wheel]
packages = ["src/master_plan"]

[tool.pytest.ini_options]
pythonpath = ["src"]
testpaths = ["tests"]
