# Cargo workspace for the Rust SDK + CLI over the master-plan-painel API.
[workspace]
resolver = "2"
members = ["sdk", "cli"]

[workspace.package]
version = "0.1.0"
edition = "2021"
license = "MIT"
repository = "https://github.com/pedroanisio/master-plan-painel"

[workspace.dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "2"
reqwest = { version = "0.12", default-features = false, features = ["blocking", "json", "rustls-tls"] }
