[package]
name = "master-plan-sdk"
description = "Typed Rust client (SDK) for the master-plan-painel API."
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
serde.workspace = true
serde_json.workspace = true
thiserror.workspace = true
reqwest.workspace = true
